--- a/MixablyMac/Base.lproj/Songs.storyboard
+++ b/MixablyMac/Base.lproj/Songs.storyboard
@@ -124,7 +124,7 @@
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
                                                 <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" viewBased="YES" indentationPerLevel="4" outlineTableColumn="GzU-wz-Mr6" id="zZL-By-j1B">
-                                                    <rect key="frame" x="0.0" y="0.0" width="165" height="300"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="165" height="0.0"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <size key="intercellSpacing" width="3" height="2"/>
                                                     <color key="backgroundColor" white="1" alpha="0.0" colorSpace="deviceWhite"/>
@@ -168,13 +168,13 @@
                                                                         <outlet property="textField" destination="DTD-SY-ago" id="C9P-m3-gzm"/>
                                                                     </connections>
                                                                 </tableCellView>
-                                                                <tableCellView identifier="DataCell" id="Yrh-Cc-PgT">
+                                                                <tableCellView identifier="LibraryCell" id="Yrh-Cc-PgT">
                                                                     <rect key="frame" x="1" y="20" width="162" height="17"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                     <subviews>
                                                                         <imageView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="42h-2X-g3V">
                                                                             <rect key="frame" x="3" y="0.0" width="17" height="17"/>
-                                                                            <imageCell key="cell" refusesFirstResponder="YES" imageScaling="proportionallyDown" image="NSActionTemplate" id="Nyb-Qq-jbH"/>
+                                                                            <imageCell key="cell" refusesFirstResponder="YES" imageScaling="proportionallyDown" image="Music" id="Nyb-Qq-jbH"/>
                                                                         </imageView>
                                                                         <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="h3t-ev-bIS">
                                                                             <rect key="frame" x="25" y="0.0" width="120" height="17"/>
@@ -190,8 +190,25 @@
                                                                         <outlet property="textField" destination="h3t-ev-bIS" id="6aL-qK-RmA"/>
                                                                     </connections>
                                                                 </tableCellView>
-                                                                <tableCellView identifier="AddCell" id="dq3-hK-jhh">
+                                                                <tableCellView identifier="DataCell" id="Odh-sp-C6w">
                                                                     <rect key="frame" x="1" y="39" width="162" height="17"/>
+                                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                                    <subviews>
+                                                                        <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cq1-p8-bJb">
+                                                                            <rect key="frame" x="2" y="0.0" width="120" height="17"/>
+                                                                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Songs" id="WZb-79-TsU">
+                                                                                <font key="font" metaFont="system"/>
+                                                                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                                            </textFieldCell>
+                                                                        </textField>
+                                                                    </subviews>
+                                                                    <connections>
+                                                                        <outlet property="textField" destination="cq1-p8-bJb" id="zoD-Od-cvM"/>
+                                                                    </connections>
+                                                                </tableCellView>
+                                                                <tableCellView identifier="AddCell" id="dq3-hK-jhh">
+                                                                    <rect key="frame" x="1" y="58" width="162" height="17"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                     <subviews>
                                                                         <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MGJ-WD-Xv5">
@@ -684,7 +701,7 @@
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
                                                 <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" viewBased="YES" indentationPerLevel="4" outlineTableColumn="dH5-LO-8SJ" id="Fbt-oD-aDd">
-                                                    <rect key="frame" x="0.0" y="0.0" width="165" height="200"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="165" height="0.0"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <size key="intercellSpacing" width="3" height="2"/>
                                                     <color key="backgroundColor" red="0.98431372549999996" green="0.98431372549999996" blue="0.98431372549999996" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
@@ -727,12 +744,8 @@
                                                                     <rect key="frame" x="1" y="20" width="162" height="17"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                     <subviews>
-                                                                        <imageView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CjO-x9-1lO">
-                                                                            <rect key="frame" x="3" y="0.0" width="17" height="17"/>
-                                                                            <imageCell key="cell" refusesFirstResponder="YES" imageScaling="proportionallyDown" image="NSFolder" id="ppM-Pu-mtH"/>
-                                                                        </imageView>
                                                                         <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pXg-AY-bBs">
-                                                                            <rect key="frame" x="23" y="0.0" width="124" height="17"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="124" height="17"/>
                                                                             <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="I6N-PC-iR2">
                                                                                 <font key="font" metaFont="system"/>
                                                                                 <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -744,7 +757,6 @@
                                                                         </textField>
                                                                     </subviews>
                                                                     <connections>
-                                                                        <outlet property="imageView" destination="CjO-x9-1lO" id="Ldu-mZ-I4b"/>
                                                                         <outlet property="textField" destination="pXg-AY-bBs" id="qBZ-HK-S3E"/>
                                                                     </connections>
                                                                 </tableCellView>
@@ -857,8 +869,7 @@
     <resources>
         <image name="IconPause" width="5" height="8"/>
         <image name="IconPlaying" width="14" height="10"/>
-        <image name="NSActionTemplate" width="14" height="14"/>
+        <image name="Music" width="13" height="12"/>
         <image name="NSAddTemplate" width="11" height="11"/>
-        <image name="NSFolder" width="32" height="32"/>
     </resources>
 </document>
